--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="/css/main.css" >
     <title>Plutus Stash</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
     <h1>Plutus Stash</h1>
@@ -19,6 +20,10 @@
 
     <a href="/login">
         <button>Login</button>
+    </a>
+
+    <a href="/to-do-list">
+        <button>To-do List</button>
     </a>
 </body>
 </html>
